feat: Set up initial React application structure, add a Careers page, and include SEO meta tags in `index.html`.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>datacareer.app</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>datacareer.app</title>
+  <meta name="description"
+    content="datacareer.app is the smarter way to land a data job in Australia. Get access to handpicked data analyst & engineering jobs from LinkedIn, Seek, and more. Practice SQL simulations with 50+ company-specific case studies from Woolworths, CBA, Telstra, and beyond. Solve real-world business problems, develop advanced SQL skills, and code in our execution environment. Discover hidden job opportunities, filter by seniority, and use AI-powered tools to streamline your job hunt. Security clearance & PR/citizenship filters included. Start your data career today! 🚀">
+  <meta property="og:title" content="Land Your Dream Data Job in Australia | SQL Practice & Curated Listings 🚀" />
+  <meta name="twitter:title" content="Land Your Dream Data Job in Australia | SQL Practice & Curated Listings 🚀" />
+  <meta property="og:site_name" content="datacareer.app" />
+  <meta name="twitter:site_name" content="datacareer.app" />
+  <meta property="og:description"
+    content="datacareer.app is the smarter way to land a data job in Australia. Get access to handpicked data analyst & engineering jobs from LinkedIn, Seek, and more. Practice SQL simulations with 50+ company-specific case studies from Woolworths, CBA, Telstra, and beyond. Solve real-world business problems, develop advanced SQL skills, and code in our execution environment. Discover hidden job opportunities, filter by seniority, and use AI-powered tools to streamline your job hunt. Security clearance & PR/citizenship filters included. Start your data career today! 🚀" />
+  <meta name="twitter:description"
+    content="datacareer.app is the smarter way to land a data job in Australia. Get access to handpicked data analyst & engineering jobs from LinkedIn, Seek, and more. Practice SQL simulations with 50+ company-specific case studies from Woolworths, CBA, Telstra, and beyond. Solve real-world business problems, develop advanced SQL skills, and code in our execution environment. Discover hidden job opportunities, filter by seniority, and use AI-powered tools to streamline your job hunt. Security clearance & PR/citizenship filters included. Start your data career today! 🚀" />
+  <meta property="og:image"
+    content="https://10a8da32466f23cbebf2446083ec643b.cdn.bubble.io/cdn-cgi/image/w=,h=,f=auto,dpr=1,fit=contain/f1738743099955x442667565482198100/Screenshot%202025-02-05%20at%201.40.45%E2%80%AFPM.png" />
+  <meta name="twitter:image:src"
+    content="https://10a8da32466f23cbebf2446083ec643b.cdn.bubble.io/cdn-cgi/image/w=,h=,f=auto,dpr=1,fit=contain/f1738743099955x442667565482198100/Screenshot%202025-02-05%20at%201.40.45%E2%80%AFPM.png" />
+  <meta property="og:url" content="https://datacareer.app/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
